@@ -58,7 +58,7 @@ class zm_catalog_default extends ZMPlugin {
         parent::init();
 
         //if (0 == ZMRequest::getProductId() && 0 == ZMRequest::getCategoryId()) {
-            $this->addMenuItem('zm_catalog_default_admin', zm_l10n_get('Catalog Manager'), 'zm_catalog_default_admin', ZM_MENU_CATALOG_ADMIN);
+            $this->addMenuItem('zm_catalog_default_admin', zm_l10n_get('Catalog Manager'), 'zm_catalog_default_admin', ZMAdminMenu::MENU_CATALOG_MANAGER_TAB);
         //}
     }
 
