@@ -60,10 +60,10 @@ class zm_category_admin extends ZMPlugin {
         $categoryId = ZMRequest::getCategoryId();
         if (0 < $categoryId) {
             // only available if category involved
-            $this->addMenuItem('zm_category_admin', zm_l10n_get('Category'), 'zm_category_admin', ZM_MENU_CATALOG_ADMIN);
+            $this->addMenuItem('zm_category_admin', zm_l10n_get('Category'), 'zm_category_admin', ZMAdminMenu::MENU_CATALOG_MANAGER_TAB);
             if (!ZMSettings::get('admin.isShowCatalogTreeProducts')) {
                 if (0 < count(ZMProducts::instance()->getProductIdsForCategoryId($categoryId, false))) {
-                    $this->addMenuItem('zm_category_admin_list', zm_l10n_get('Products'), 'zm_category_admin_list', ZM_MENU_CATALOG_ADMIN);
+                    $this->addMenuItem('zm_category_admin_list', zm_l10n_get('Products'), 'zm_category_admin_list', ZMAdminMenu::MENU_CATALOG_MANAGER_TAB);
                 }
             }
         }
