@@ -16,6 +16,9 @@ Release 0.9.5
   form data in case they need to twiddle with it (so far only checkboxes need
 	this
 - fix missing calculated price on order items; b:#2544585
+- refactor and streamline admin menu handling; add ZMAdminMenu class; use
+  ZMAdmin constants rather defines for menu ids, add new const to add items to
+  the tools menu
 
 Release 0.9.4.2
 - improve ZMAjaxController::flattenObject(); using ZMBeanUtils, correct
